# ply-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
example_plys/: all_atomic_types_ok_ascii.ply  empty_2_ok_little_endian.ply  exponent_values_ok_ascii.ply  house_2_ok_ascii.ply  house_2_ok_little_endian.ply  leading_spaces_ok_ascii.ply  single_elements_err_ascii.ply  single_elements_ok_ascii.ply
examples/: read_ply.rs  read_ply_header_only.rs  read_ply_to_structs.rs  write_empty_ply.rs  write_ply.rs
scripts/: id_rsa.enc  travis-doc-upload.cfg  travis-doc-upload.sh
src/: lib.rs  parser.rs  ply.rs  ply_grammar.rustpeg  util.rs  writer.rs
src/parser/: ascii.rs  binary.rs  mod.rs  ply_grammar.rs  ply_grammar.rustpeg
src/ply/: consistency.rs  default_element.rs  key_map.rs  mod.rs  ply_data_structure.rs  property.rs
src/writer/: ascii.rs  binary.rs  mod.rs
tests/: read.rs  write.rs
tests/plys/: empty_ascii.ply  greg_turk_example1_ok_ascii.ply  greg_turk_example2_ok_ascii.ply  house_ascii.ply
