[package]
name = "ply-rs"
version = "0.1.0"
authors = ["Felice Serena <felice@serena-mueller.ch>"]
repository = "https://github.com/Fluci/ply-rs.git"
homepage = "https://github.com/Fluci/ply-rs"
license = "MIT"
readme = "README.md"
description = "Library for reading/writing ascii and binary PLY files."
build = "build.rs"

[dependencies]
linked-hash-map = "0.4.2"
byteorder = "1.0.0"

[build-dependencies]
peg = "0.5.3"
skeptic = "0.9"

[dev-dependencies]
skeptic = "0.9"

[[example]]
name = "read_ply"

[[example]]
name = "write_ply"

[[example]]
name = "read_ply_header_only"

[[example]]
name = "read_ply_to_structs"

[[example]]
name = "write_empty_ply"
