[package]
name = "ply-rs"
version = "0.1.1"
authors = ["Felice Serena <felice@serena-mueller.ch>"]
repository = "https://github.com/Fluci/ply-rs.git"
homepage = "https://github.com/Fluci/ply-rs"
license = "MIT"
readme = "README.md"
documentation = "https://fluci.github.io/travis_docs/ply-rs/ply_rs/index.html"
description = "Library for reading/writing ascii and binary PLY files."
keywords = [ "ply" ]
categories = [ "encoding", "parsing" ]
build = "build.rs"
exclude = [
    "scripts/*"
]

[badges]
travis-ci = { repository = "Fluci/ply-rs", branch = "master" }

[dependencies]
linked-hash-map = "0.5.1"
byteorder = "1.2.7"

[build-dependencies]
peg = "0.5.4"
skeptic = "0.13.4"

[dev-dependencies]
skeptic = "0.13.4"

[[example]]
name = "read_ply"

[[example]]
name = "write_ply"

[[example]]
name = "read_ply_header_only"

[[example]]
name = "read_ply_to_structs"

[[example]]
name = "write_empty_ply"
